--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -91,6 +91,7 @@
                 </div>
                 <div ngbDropdownMenu aria-labelledby="dropdownBasic1" style="margin-top: 12px; border-color: #368ee0;">
                   <button ngbDropdownItem style="padding: 10px;">Tài khoản</button>
+                  <button ngbDropdownItem style="padding: 10px;" routerLink="/login" (click)="logout()">Đổi mật khẩu</button>
                   <button ngbDropdownItem style="padding: 10px;" routerLink="/login" (click)="logout()">Đăng xuất</button>
                 </div>
               </div>
