--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -5,18 +5,54 @@
       <div class="bg-login"></div>
     </div>
     <div class="col-md-6">
-       <div style="padding-top: 30px;">
+       <div>
         <div>
-          <div style="text-align: center;"><img src="../../assets/img/logo_eContract_21.svg" width="200" /></div>
+          <div style="text-align: center;padding: 10%;"><img src="../../assets/img/logo_eContract_21.svg" width="300" /></div>
           <form class="form-signin" [formGroup]="loginForm">
-
-            <div class="form-group" style="text-align: center;">
-              <input id="inputUsername" formControlName="username" type="text" class="form-control inputLogin" placeholder="Tên đăng nhập">
+            <div class="form-group">
+              <div class="input-group">
+                <div class="input-group-prepend">
+                  <span class="input-group-text" style="padding: 10px;">
+                    <i class="fa fa-user" aria-hidden="true" style="color: #106DB6;"></i>
+                  </span>
+                </div>
+                <input
+                  type="text"
+                  id="username"
+                  class="form-control"
+                  placeholder="Tên đăng nhập"
+                  formControlName="username"
+                />
+              </div>
             </div>
 
-            <div class="form-group" style="text-align: center;">
-              <input id="password" formControlName="password" type="text" class="form-control inputLogin" placeholder="Mật khẩu">
-              <i class="bi bi-eye-slash" id="togglePassword" style="margin-left: -30px; cursor: pointer;"></i>
+            <div class="form-group">
+              <div class="input-group">
+                <div class="input-group-prepend">
+                  <span class="input-group-text" style="padding: 10px;">
+                    <i class="fa fa-unlock-alt" aria-hidden="true" style="color: #106DB6;"></i>
+                  </span>
+                </div>
+                <input [type]="fieldTextType ? 'text' : 'password'"
+                  class="form-control" placeholder="Mật khẩu" formControlName="password"
+                />
+                <div class="input-group-append">
+                  <span class="input-group-text" style="padding: 10px;">
+                    <i class="fa"
+                      [ngClass]="{
+                        'fa-eye-slash': !fieldTextType,
+                        'fa-eye': fieldTextType
+                      }"
+                      (click)="toggleFieldTextType()"
+                      style="color: #106DB6;"
+                    ></i>
+                  </span>
+                </div>
+              </div>
+            </div>
+
+            <div class="form-group" style="text-align: right;">
+              <a style="text-decoration: underline; color: -webkit-link;">Quên mật khẩu?</a>
             </div>
 
             <p class="alert alert-danger" role="alert" *ngIf="error">
@@ -24,7 +60,7 @@
             </p>
 
             <div class="form-group" style="text-align: center;">
-              <button class="btn btn-lg btn-block text-uppercase" style="background-color: #106DB6; color: white;" (click)="loginUser()">Đăng nhập</button>
+              <button class="btn btn-lg btn-block" style="background-color: #106DB6; color: white;" (click)="loginUser()">ĐĂNG NHẬP</button>
             </div>
           </form>
           <div class="bg-footer-login"></div>
