--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -24,7 +24,7 @@
                     </a>
                 </li>
                 <li>
-                    <a href="/main/app-contract" style="display: flex;">
+                    <a href="/main/contract" style="display: flex;">
                         <div style="width: 25px; text-align: center;"><img src="assets/img/contract.svg" width="16"/></div>
                         <span>Hợp đồng</span>
                     </a>
