--- a/src/app/login/reset-password/reset-password.component.html
+++ b/src/app/login/reset-password/reset-password.component.html
@@ -1,30 +1,14 @@
 <div class="container">
   <div class="row">
     <div class="col-md-6">
-      <!-- <img src="../../assets/img/digital_sign.svg" width="100%" height="auto" /> -->
       <div class="bg-login"></div>
     </div>
     <div class="col-md-6">
        <div>
         <div>
-          <div style="text-align: center;padding: 10%;"><img src="../../assets/img/logo_eContract_21.svg" width="300" /></div>
-          <form class="form-signin" [formGroup]="loginForm">
-            <div class="form-group">
-              <div class="input-group">
-                <div class="input-group-prepend">
-                  <span class="input-group-text" style="padding: 10px;">
-                    <i class="fa fa-user" aria-hidden="true" style="color: #106DB6;"></i>
-                  </span>
-                </div>
-                <input
-                  type="text"
-                  id="username"
-                  class="form-control"
-                  placeholder="Tên đăng nhập"
-                  formControlName="username"
-                />
-              </div>
-            </div>
+          <form class="form-signin" [formGroup]="resetPasswordForm">
+            <div style="margin: 30px;color:#106DB6; font-size: 30px;">Đặt lại mật khẩu</div>
+            <div style="margin: 30px;color:red;">Nhập mật khẩu mới và xác nhận lại mật khẩu</div>
 
             <div class="form-group">
               <div class="input-group">
@@ -33,8 +17,8 @@
                     <i class="fa fa-unlock-alt" aria-hidden="true" style="color: #106DB6;"></i>
                   </span>
                 </div>
-                <input [type]="fieldTextType ? 'text' : 'password'"
-                  class="form-control" placeholder="Mật khẩu" formControlName="password"
+                <input id="password" formControlName="password" [type]="fieldTextType ? 'text' : 'password'"
+                  class="form-control" placeholder="Mật khẩu mới"
                 />
                 <div class="input-group-append">
                   <span class="input-group-text" style="padding: 10px;">
@@ -51,21 +35,44 @@
               </div>
             </div>
 
+            <div class="form-group">
+              <div class="input-group">
+                <div class="input-group-prepend">
+                  <span class="input-group-text" style="padding: 10px;">
+                    <i class="fa fa-unlock-alt" aria-hidden="true" style="color: #106DB6;"></i>
+                  </span>
+                </div>
+                <input id="confirmpassword" formControlName="confirmpassword" [type]="repeatFieldTextType ? 'text' : 'password'"
+                  class="form-control" placeholder="Xác nhận mật khẩu mới" />
+                <div class="input-group-append">
+                  <span class="input-group-text" style="padding: 10px;">
+                    <i class="fa"
+                      [ngClass]="{
+                        'fa-eye-slash': !repeatFieldTextType,
+                        'fa-eye': repeatFieldTextType
+                      }"
+                      (click)="toggleRepeatFieldTextType()"
+                      style="color: #106DB6;"
+                    ></i>
+                  </span>
+                </div>
+              </div>
+            </div>
+
             <div class="form-group" style="text-align: right;">
               <a href="/forgot-password" style="text-decoration: underline; color: -webkit-link; cursor: pointer;">Quên mật khẩu?</a>
             </div>
 
-            <p class="alert alert-danger" role="alert" *ngIf="error">
+            <!-- <p class="alert alert-danger" role="alert" *ngIf="error">
               <strong>Tên đăng nhập hoặc mật khẩu không đúng</strong>
-            </p>
+            </p> -->
 
             <div class="form-group" style="text-align: center;">
-              <button class="btn btn-lg btn-block" style="background-color: #106DB6; color: white;" (click)="loginUser()">ĐĂNG NHẬP</button>
+              <button (click)="sendResetPassword()" class="btn btn-lg btn-block" style="background-color: #106DB6; color: white;">GỬI YÊU CẦU</button>
             </div>
           </form>
           <div class="bg-footer-login"></div>
         </div>
-
       </div>
     </div>
   </div>
