--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -207,7 +207,7 @@
             </div>
           </div>
           <div class="form-group" style="text-align: center; padding-top: 30px;">
-            <button class="btn btn-lg btn-block" style="background-color: #106DB6; color: white;">Gửi yêu cầu</button>
+            <button (click)="modal.dismiss('Cross click'); sendResetPassword()" class="btn btn-lg btn-block" style="background-color: #106DB6; color: white;">Gửi yêu cầu</button>
           </div>
         </form>
       </div>
