--- a/src/app/login/forgot-password/forgot-password.component.html
+++ b/src/app/login/forgot-password/forgot-password.component.html
@@ -1,4 +1,4 @@
-<div class="container">
+<div>
   <div class="row">
     <div class="col-md-6">
       <div class="bg-login"></div>
@@ -14,7 +14,7 @@
             <div class="form-group">
               <div class="input-group">
                 <div class="input-group-prepend">
-                  <span class="input-group-text" style="padding: 10px;">
+                  <span class="input-group-text">
                     <i class="fa fa-envelope" aria-hidden="true" style="color: #106DB6;"></i>
                   </span>
                 </div>
