--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,4 +1,4 @@
-<div class="container">
+<div>
   <div class="row">
     <div class="col-md-6">
       <!-- <img src="../../assets/img/digital_sign.svg" width="100%" height="auto" /> -->
@@ -7,12 +7,12 @@
     <div class="col-md-6">
        <div>
         <div>
-          <div style="text-align: center;padding: 10%;"><img src="../../assets/img/logo_eContract_21.svg" width="300" /></div>
+          <div style="text-align: center;padding: 5%;"><img src="../../assets/img/logo_eContract_21.svg" width="70%" /></div>
           <form class="form-signin" [formGroup]="loginForm">
             <div class="form-group">
               <div class="input-group">
                 <div class="input-group-prepend">
-                  <span class="input-group-text" style="padding: 10px;">
+                  <span class="input-group-text">
                     <i class="fa fa-user" aria-hidden="true" style="color: #106DB6;"></i>
                   </span>
                 </div>
@@ -29,7 +29,7 @@
             <div class="form-group">
               <div class="input-group">
                 <div class="input-group-prepend">
-                  <span class="input-group-text" style="padding: 10px;">
+                  <span class="input-group-text">
                     <i class="fa fa-unlock-alt" aria-hidden="true" style="color: #106DB6;"></i>
                   </span>
                 </div>
@@ -37,7 +37,7 @@
                   class="form-control" placeholder="Mật khẩu" formControlName="password"
                 />
                 <div class="input-group-append">
-                  <span class="input-group-text" style="padding: 10px;">
+                  <span class="input-group-text">
                     <i class="fa"
                       [ngClass]="{
                         'fa-eye-slash': !fieldTextType,
@@ -60,7 +60,7 @@
             </p>
 
             <div class="form-group" style="text-align: center;">
-              <button class="btn btn-lg btn-block" style="background-color: #106DB6; color: white;" (click)="loginUser()">ĐĂNG NHẬP</button>
+              <button class="btn btn-lg btn-block" (click)="loginUser()">ĐĂNG NHẬP</button>
             </div>
           </form>
           <div class="bg-footer-login"></div>
