--- a/src/app/login/reset-password/reset-password.component.html
+++ b/src/app/login/reset-password/reset-password.component.html
@@ -1,4 +1,4 @@
-<div class="container">
+<div>
   <div class="row">
     <div class="col-md-6">
       <div class="bg-login"></div>
@@ -13,7 +13,7 @@
             <div class="form-group">
               <div class="input-group">
                 <div class="input-group-prepend">
-                  <span class="input-group-text" style="padding: 10px;">
+                  <span class="input-group-text">
                     <i class="fa fa-unlock-alt" aria-hidden="true" style="color: #106DB6;"></i>
                   </span>
                 </div>
@@ -21,7 +21,7 @@
                   class="form-control" placeholder="Mật khẩu mới"
                 />
                 <div class="input-group-append">
-                  <span class="input-group-text" style="padding: 10px;">
+                  <span class="input-group-text">
                     <i class="fa"
                       [ngClass]="{
                         'fa-eye-slash': !fieldTextType,
@@ -38,14 +38,14 @@
             <div class="form-group">
               <div class="input-group">
                 <div class="input-group-prepend">
-                  <span class="input-group-text" style="padding: 10px;">
+                  <span class="input-group-text">
                     <i class="fa fa-unlock-alt" aria-hidden="true" style="color: #106DB6;"></i>
                   </span>
                 </div>
                 <input id="confirmpassword" formControlName="confirmpassword" [type]="repeatFieldTextType ? 'text' : 'password'"
                   class="form-control" placeholder="Xác nhận mật khẩu mới" />
                 <div class="input-group-append">
-                  <span class="input-group-text" style="padding: 10px;">
+                  <span class="input-group-text">
                     <i class="fa"
                       [ngClass]="{
                         'fa-eye-slash': !repeatFieldTextType,
@@ -57,10 +57,6 @@
                   </span>
                 </div>
               </div>
-            </div>
-
-            <div class="form-group" style="text-align: right;">
-              <a href="/forgot-password" style="text-decoration: underline; color: -webkit-link; cursor: pointer;">Quên mật khẩu?</a>
             </div>
 
             <!-- <p class="alert alert-danger" role="alert" *ngIf="error">
