Menu + call API login

--- a/src/app/main/contract/contract.component.html
+++ b/src/app/main/contract/contract.component.html
@@ -1,5 +1,4 @@
-<div class="activity-card" style="padding: 30px;">
-  <h5 style="margin: 0 0 1rem 0;">DANH SÁCH HỢP ĐỒNG</h5>
+<div class="activity-card">
   <div>
     <input type="text" name="search" placeholder="Nhập từ khóa tìm kiếm theo tên hợp đồng..">
   </div>
