--- a/src/app/main/sidebar/sidebar.component.scss
+++ b/src/app/main/sidebar/sidebar.component.scss
@@ -413,7 +413,7 @@
 
 
 /*------------------------------default theme---------------------------------*/
-$bg-sidebar-wrapper : #1d1d1d;
+$bg-sidebar-wrapper : rgba(183, 206, 250, 0.1);
 $border-color : #2b2b2b;
 $footer-top-border-color :#3a3a3a;
 $color:#106DB6;
