--- a/src/app/main/sidebar/sidebar.component.scss
+++ b/src/app/main/sidebar/sidebar.component.scss
@@ -424,7 +424,7 @@ $bg-scrollbar :#636363;
 
 // colors with backgound image
 $img-bg-sidebar-wrapper : rgba(183, 206, 250, 0.1);
-$img-border-color : rgba(255, 255, 255, 0.1);
+$img-border-color : #0c2be21a;
 $img-bg-footer :rgba(43, 43, 43, 0.5);
 $img-shadow-color:rgba(0, 0, 0, 0.5);
 
