--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -55,12 +55,14 @@
               <a href="/forgot-password" style="text-decoration: underline; color: -webkit-link; cursor: pointer;">Quên mật khẩu?</a>
             </div>
 
-            <p class="alert alert-danger" role="alert" *ngIf="error">
-              <strong>Tên đăng nhập hoặc mật khẩu không đúng</strong>
-            </p>
+            <div class="form-group">
+              <p class="alert alert-danger" role="alert" *ngIf="error" style="text-align: center;">
+                <strong>{{errorDetail}}</strong>
+              </p>
+            </div>
 
             <div class="form-group" style="text-align: center;">
-              <button class="btn btn-lg btn-block" (click)="loginUser()">ĐĂNG NHẬP</button>
+              <button class="btn btn-lg btn-block" (click)="loginUser()">Đăng nhập</button>
             </div>
           </form>
           <div class="bg-footer-login"></div>
