--- a/src/app/login/login.component.scss
+++ b/src/app/login/login.component.scss
@@ -1,3 +1,4 @@
+
 input.form-control.rounded {
   border-radius: 2rem !important;
 }
@@ -25,12 +26,12 @@ input.form-control.rounded {
 }
 
 .form-signin .btn {
-  font-size     : 80%;
+  //font-size     : 80%;
   border-radius : 5rem;
   letter-spacing: .1rem;
-  font-weight   : bold;
+  //font-weight   : bold;
   // padding       : 1rem;
-  transition    : all 0.2s;
+  //transition    : all 0.2s;
 }
 
 .form-label-group {
