--- a/src/app/login/reset-password/reset-password.component.html
+++ b/src/app/login/reset-password/reset-password.component.html
@@ -59,12 +59,8 @@
               </div>
             </div>
 
-            <!-- <p class="alert alert-danger" role="alert" *ngIf="error">
-              <strong>Tên đăng nhập hoặc mật khẩu không đúng</strong>
-            </p> -->
-
             <div class="form-group" style="text-align: center;">
-              <button (click)="sendResetPassword()" class="btn btn-lg btn-block" style="background-color: #106DB6; color: white;">GỬI YÊU CẦU</button>
+              <button (click)="sendResetPassword()" class="btn btn-lg btn-block" style="background-color: #106DB6; color: white;">Gửi yêu cầu</button>
             </div>
           </form>
           <div class="bg-footer-login"></div>
