--- a/src/app/main/sidebar/sidebar.component.html
+++ b/src/app/main/sidebar/sidebar.component.html
@@ -12,12 +12,12 @@
           <li *ngFor="let menu of menus" [ngClass]="{'active': menu.active , 'sidebar-dropdown':menu.type === 'dropdown' , 'header-menu':menu.type === 'header'}">
             <span *ngIf="menu.type === 'header'">{{menu.title}}</span>
             <a *ngIf="menu.href === '#'" (click)='toggle(menu)'>
-              <i class="{{menu.icon}}"></i>
+              <i class="{{menu.icon}}" style="font-size: 16px;"></i>
               <span>{{menu.title}}</span>
               <span *ngIf="menu.badge" class="badge badge-pill" [ngClass]="menu.badge.class">{{menu.badge.text}}</span>
             </a>
             <a *ngIf="menu.href !== '#'" href="{{menu.href}}" (click)='toggle(menu)'>
-              <i class="{{menu.icon}}"></i>
+              <i class="{{menu.icon}}" style="font-size: 16px;"></i>
               <span>{{menu.title}}</span>
               <span *ngIf="menu.badge" class="badge badge-pill" [ngClass]="menu.badge.class">{{menu.badge.text}}</span>
             </a>
