handle drag and drop, create display step 3

--- a/src/app/main/contract/shared/model/contract-header/contract-header.component.html
+++ b/src/app/main/contract/shared/model/contract-header/contract-header.component.html
@@ -1,6 +1,6 @@
-<div class="col-md-12 col-md-offset-3">
+<div class="col-md-12 col-md-offset-3" style="display: flex">
   <!-- step by step -->
-  <div class="activity-card" style="padding: 10px;text-align: center;">
+  <div class="activity-card col" style="padding: 10px;text-align: center;">
     <ul id="progressbar">
       <li [ngClass]="step>=1 ? 'active ' : 'inactive'"><span
         [ngClass]="{'current_active' : step==1}">Thông tin tài liệu</span></li>
