edit css login and check forgot password

--- a/src/app/login/forgot-password/forgot-password.component.html
+++ b/src/app/login/forgot-password/forgot-password.component.html
@@ -1,15 +1,16 @@
-<div>
+<!DOCTYPE html>
+<html>
+<body>
+  <div class="container" style="background: white;">
   <div class="row">
     <div class="col-md-6">
-      <div class="bg-login"></div>
+      <div class="bg"></div>
     </div>
     <div class="col-md-6">
-       <div>
-        <div>
-
-          <form class="form-signin" [formGroup]="forgotPasswordForm">
+       <div class="d-flex flex-column"  style="height: 100vh;">
+          <form class="form-signin" [formGroup]="forgotPasswordForm" style="height: inherit;">
             <div style="margin: 30px; color:#106DB6; font-size: 30px;">Quên mật khẩu</div>
-            <div style="margin: 30px; color:red;">Nhập địa chỉ email bạn đã sử dụng đăng ký trên MobiFone eContract</div>
+            <div style="margin: 30px; font-weight: 500;color: #8f8a8a;">Nhập địa chỉ email bạn đã sử dụng đăng ký trên MobiFone eContract</div>
 
             <div class="form-group">
               <div class="input-group">
@@ -22,14 +23,48 @@
               </div>
             </div>
 
+            <div class="form-group">
+              <p class="alert alert-danger" role="alert" *ngIf="error" style="text-align: center;">
+                <strong>{{errorDetail}}</strong>
+              </p>
+            </div>
+
             <div class="form-group" style="text-align: center;">
-              <button (click)="sendForgetPassword()" class="btn btn-lg btn-block" style="background-color: #106DB6; color: white;">Gửi yêu cầu</button>
+              <button (click)="sendForgetPassword(); error ? false : open(mymodal)" class="btn btn-lg btn-block" style="background-color: #106DB6; color: white;">Gửi yêu cầu</button>
             </div>
           </form>
           <div class="bg-footer-login"></div>
-        </div>
-
       </div>
     </div>
   </div>
 </div>
+</body>
+</html>
+
+
+<!-- Popup notification send email -->
+<ng-template #mymodal let-modal >
+  <div class="container">
+    <div class="row">
+      <div class="col-md-12">
+        <div class="modal-header" style="align-items: start; height: 50px;">
+          <h3>THÔNG BÁO</h3>
+          <button type="button" class="close" (click)="modal.dismiss('Cross click')" style="border: none;background: none;">
+            <span style="font-size: 25px;">×</span>
+          </button>
+        </div>
+
+          <div class="form-group">
+            <div class="input-group">
+              <p class="alert" role="alert"  [ngClass]="{'alert-danger' : status==0, 'alert-primary' : status==1}" style="text-align: center;">
+              {{notification}}
+            </p>
+            </div>
+          </div>
+          <div class="form-group" style="text-align: center; padding-top: 30px;">
+            <button (click)="modal.dismiss('Cross click');" class="btn btn-lg btn-block" style="background-color: #106DB6; color: white;">Đồng ý</button>
+          </div>
+      </div>
+    </div>
+  </div>
+</ng-template>
