create form drag and drop sample contract

--- a/src/app/main/contract/shared/model/sample-contract/sample-contract.component.html
+++ b/src/app/main/contract/shared/model/sample-contract/sample-contract.component.html
@@ -1,23 +1,28 @@
 <div class="sample-contract row">
-<!--  information contract-->
-  <div class="col-md-3 sample-contract__information" style="background-color: white">
-    <div class="sample-contract__information--drag">
+  <!--  information contract-->
+  <div class="col-md-3 sample-contract__information" style="background-color: white; z-index: 10">
+    <div class="sample-contract__information--drag" id="width-element-info" style="position: relative">
       <label style="padding-bottom: 10px" class="label">CÁC THÀNH PHẦN (<span style="color: red">KÉO THẢ</span>)</label>
-      <div style="display: flex; justify-content: space-around; margin-bottom: 15px">
-        <div class="resize-drag content-drag" style="margin-right: 5px">Số tài liệu</div>
-        <div class="resize-drag content-drag" style="margin-left: 5px">Text</div>
-      </div>
-
-      <div style="display: flex; justify-content: space-around">
-        <div class="resize-drag content-drag" style="height: 102px; flex-direction: column; margin-right: 5px">
-          <img src="assets/img/img_drag.svg" alt="mobifoneContract">
-          <span>Chữ ký ảnh</span>
+      <!--      <div>-->
+      <div *ngFor="let d of this.datas.contract_user_sign" class="show-list-name-class"
+           style="display: inline-block; margin-bottom: 10px; margin-right: 5px">
+        <div *ngIf="!d.sign_config.position" class="resize-drag" (click)="showThumbnail()" [id]=getIdSignChuaKeo(d.id)>
+          <div class="signature-sample-drag" style="position: relative">
+            <div *ngIf="d.sign_unit == 'so_tai_lieu' || d.sign_unit == 'text'" [ngStyle]="setWidth(d)"
+                 class="content-drag"
+                 id="element-drag-text">{{d.sign_unit == 'so_tai_lieu' ? 'Số tài liệu' : 'Text'}}</div>
+            <div *ngIf="d.sign_unit == 'chu_ky_so' || d.sign_unit == 'chu_ky_anh'" class="content-drag"
+                 id="element-drag"
+                 style="height: 102px; flex-direction: column" [ngStyle]="setWidth(d)">
+              <img [src]="d.sign_unit == 'chu_ky_anh' ? 'assets/img/img_drag.svg' : 'assets/img/img_sign_number.svg'"
+                   alt="ck.mobifone">
+              <span
+                *ngIf="d.sign_unit == 'chu_ky_anh' || d.sign_unit == 'chu_ky_so'">{{d.sign_unit == 'chu_ky_anh' ? 'Chữ ký ảnh' : 'Chữ ký số'}}</span>
+            </div>
+          </div>
         </div>
-        <div class="resize-drag content-drag" style="height: 102px; flex-direction: column; margin-left: 5px">
-          <img src="assets/img/img_sign_number.svg" alt="mobifoneContract">
-          <span>Chữ ký số</span>
-        </div>
       </div>
+      <!--      </div>-->
 
 
     </div>
@@ -25,11 +30,11 @@
     <div class="sample-contract__information--user-sign">
       <label class="label">THUỘC TÍNH</label>
       <label class="label-require">Người ký: *</label>
-<!--      <select name="select-user-sign" class="select-text">-->
-<!--        <option value="1">Option 1</option>-->
-<!--        <option value="2">Option 2</option>-->
-<!--        <option value="3">Option 3</option>-->
-<!--      </select>-->
+      <!--      <select name="select-user-sign" class="select-text">-->
+      <!--        <option value="1">Option 1</option>-->
+      <!--        <option value="2">Option 2</option>-->
+      <!--        <option value="3">Option 3</option>-->
+      <!--      </select>-->
     </div>
     <hr>
     <div class="flex-column">
@@ -61,20 +66,24 @@
     </div>
   </div>
 
-<!--  file content-->
-  <div class="col-md-9 sample-contract__file viewer-pdf isDrag">
+  <!--  file content-->
+  <div class="col-md-9 sample-contract__file viewer-pdf isDrag" style="background-color: #f3f7f9; position: relative">
     <div id="pdf-viewer-step-3">
-<!--      <div *ngFor="let d of this.convertToSignConfig()" class="show-list-name-drag" [style.width]="this.canvasWidth">-->
+      <div *ngFor="let d of this.convertToSignConfig()" class="show-list-name-drag" [style.width]="this.canvasWidth">
         <div class="resize-drag not-out-drop"
-             [id]="123456789"
+             [id]="d.id"
              style="z-index: -1"
              #itemElement
              [ngClass]="changeColorDrag(null,true)"
-             [ngStyle]="changePosition()">
+             [ngStyle]="changePosition(d)">
+          <div class="sig-img-daky" (click)="onCancel($event, d)">
+            <img src="assets/img/clear.svg" alt="">
+            <img src="assets/img/border-clear.svg" alt="">
+          </div>
 <!--          <img src="assets/img/icons/cancel-sign.svg" (click)="onCancel($event, d)" class="sig-img-daky">-->
-          <div>Đỗ Thành Dương</div>
+          <app-sign-contract [datas]="datas" [sign]="d"></app-sign-contract>
         </div>
-<!--      </div>-->
+      </div>
 
     </div>
 
