--- a/src/app/main/contract/shared/model/sample-contract/sample-contract.component.scss
+++ b/src/app/main/contract/shared/model/sample-contract/sample-contract.component.scss
@@ -2,12 +2,13 @@
   height: calc(100vh - 221px);
 
   &__file {
-    background-color: #f3f7f9;
+
+    //position: relative;
     .sig-img-daky{
       position: absolute;
       top: -11px;
       right: -8px;
-      cursor: pointer;
+      //cursor: pointer;
     }
 
   }
@@ -47,8 +48,7 @@
   &__information {
     &--drag {
       .content-drag {
-        cursor: pointer
-      ;
+        //cursor: pointer;
         width: 100%;
         height: 30px;
         background-color: #EBF8FF;
@@ -59,6 +59,10 @@
         display: flex;
         justify-content: center;
         align-items: center
+      }
+
+      .show-list-name-class {
+        //float: left;
       }
     }
 
@@ -115,10 +119,9 @@
 
 // test
 
-.employer-ck-da-keo{
-  border: 1px solid #92bff5;
-  color: #fe7744;
-  border-radius: 2px;
+.ck-da-keo{
+  border: 1px solid #106DB6;
+  border-radius: 5px;
 }
 
 .staff-ck-da-keo {
@@ -151,7 +154,7 @@
   border-radius: 2px;
 }
 
-.resize-drag, .resize-drag-default {
+.resize-drag {
   //position: absolute; // thuoc tinh absolute de giu nguyen vi tri khi keo sang pdf
   z-index: 9;
   //width: 250px;
@@ -163,12 +166,25 @@
   touch-action: none;
   display: flex;
   align-items: center;
-  justify-content: start;
+  justify-content: center;
   color: rgba(27, 51, 91, 1);
 
   /* This makes things *much* easier */
   box-sizing: border-box;
   //padding: 10px;
+
+  .sig-img-daky {
+    cursor: pointer;
+    > img {
+      width: 16px;
+    }
+    img:nth-last-child(2) {
+      width: 8px;
+      top: 6px;
+      position: absolute;
+      right: 3px;
+    }
+  }
 }
 
 .drag-image{
@@ -176,4 +192,9 @@
   //right: -22px;
   //top: 5px;
   padding-left: 7px;
+}
+
+#element-drag-text, #element-drag {
+  //display: inline-block;
+  //width: ;
 }
